SERVER-47723: Correct timestamp monitor log line.